Replace apollo with provenance

--- a/Resources/popup.html
+++ b/Resources/popup.html
@@ -7,12 +7,12 @@
         <script type="module" src="popup.js"></script>
     </head>
     <body>
-        <h2>Open in Apollo</h2>
+        <h2>Open in Provenance</h2>
 
         <div class="cell">
             <span>Automatically</span>
             <input type="checkbox" class="uiswitch custom" id="automatic-toggle">
         </div>
-        <p class="cell-description">If enabled, Reddit links will automatically open in Apollo. If disabled, it will ask you each time you encounter a link what you want to do.</p>
+        <p class="cell-description">If enabled, ROM links will automatically open in Provenance. If disabled, it will ask you each time you encounter a link what you want to do.</p>
     </body>
 </html>
